# ton-grpc

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .prototools  .release-please-manifest.json  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  builder.Dockerfile  clippy.toml  init.sh  moon.yml  release-please-config.json  rust-toolchain.toml  tvm-grpc.Dockerfile
adnl-tcp/: CHANGELOG.md  Cargo.toml
adnl-tcp/src/: aes_ctr.rs  boxed.rs  client.rs  codec.rs  connection.rs  deserializer.rs  key.rs  lib.rs  packet.rs  ping.rs  serializer.rs  server.rs  types.rs
adnl-tcp/src/crypto/: aes256ctr.rs  mod.rs
crates/adnl-tcp/: CHANGELOG.md  Cargo.toml
crates/adnl-tcp/src/: aes_ctr.rs  client.rs  codec.rs  key.rs  packet.rs  ping.rs  types.rs
crates/testcontainers-ton/: Cargo.toml
crates/testcontainers-ton/src/: genesis.rs  lib.rs  lite_server.rs
crates/ton-client/: Cargo.toml  moon.yml
crates/ton-client-util/: Cargo.toml
crates/ton-client/examples/: block_get_tx.rs  getgems_balance.rs  last_n_transactions.rs  next_block.rs  txs.rs
crates/ton-client/src/: account_client.rs  account_client_ext.rs  block_client.rs  block_client_ext.rs  builder.rs  client.rs  ext.rs  lib.rs  message_client.rs  smc_client.rs  types.rs
crates/ton-config/: Cargo.toml
crates/ton-config/src/: lib.rs
crates/ton-contract/: Cargo.toml
crates/ton-contract/src/: adapters.rs  contract.rs  error.rs  jetton.rs  wallet.rs
crates/ton-emulator/: Cargo.toml
crates/ton-emulator/src/: alloc.rs  emulator.rs  error.rs  lib.rs
crates/ton-grpc/: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs  moon.yml
crates/ton-grpc/examples/: compare_transactions.rs
crates/ton-grpc/src/: account.rs  block.rs  comparing.rs  helpers.rs  lib.rs  main.rs  message.rs  ton.rs
crates/ton-grpc/tests/: integration.rs
crates/ton-liteserver-client/: CHANGELOG.md  Cargo.toml  build.rs  moon.yml
crates/ton-liteserver-client/examples/: balance.rs  block_transactions.rs  masterchain_block.rs  masterchain_block_header.rs  playground.rs  shards.rs  tower.rs
crates/ton-liteserver-client/src/: account_client.rs  block_client.rs  client.rs  convert.rs  lib.rs  make.rs  message_client.rs  smc_client.rs  tl.rs  tracked_client.rs  wait_seqno.rs
crates/ton-tower/: Cargo.toml
crates/ton-tower/src/: lib.rs  request.rs  response.rs
crates/toner-tlb-macros/: Cargo.toml
crates/toner-tlb-macros/src/: bit_pack.rs  bit_unpack.rs  cell_deserialize.rs  cell_serialize.rs  common.rs  lib.rs  reader.rs  writer.rs
crates/toner-tlb-macros/tests/: derive.rs
crates/tonlibjson-client/: CHANGELOG.md  Cargo.toml  build.rs  moon.yml
crates/tonlibjson-client/examples/: block_get_tx.rs  getgems_balance.rs  last_n_transactions.rs  next_block.rs  txs.rs
crates/tonlibjson-client/src/: address.rs  block.rs  client.rs  convert.rs  deserialize.rs  error.rs  lib.rs  make.rs  metric.rs  request.rs  retry.rs  session.rs  tl.rs  ton.rs
crates/tonlibjson-client/tests/: client.rs
crates/tonlibjson-sys/: CHANGELOG.md  Cargo.toml  build.rs  moon.yml
crates/tonlibjson-sys/csrc/: shim.cpp
crates/tonlibjson-sys/src/: lib.rs  tonemulator.rs  tonlibjson.rs
crates/tvm-grpc/: CHANGELOG.md  Cargo.toml  Dockerfile
crates/tvm-grpc/proto/: tvm.proto
crates/tvm-grpc/src/: main.rs  threaded.rs  transaction_emulator.rs  tvm.rs  tvm_emulator.rs
ton-client-util/: Cargo.toml
ton-client-util/src/: lib.rs
ton-client-util/src/actor/: mod.rs
ton-client-util/src/discover/: config.rs  mod.rs
ton-client-util/src/router/: balance.rs  mod.rs  route.rs  shard_prefix.rs  shards.rs
ton-client-util/src/service/: load_ref.rs  mod.rs  shared.rs  timeout.rs
ton-contract/: Cargo.toml
ton-contract/src/: adapters.rs  contract.rs  error.rs  jetton.rs  lib.rs  wallet.rs
ton-grpc/: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
ton-grpc/proto/: ton.proto
ton-grpc/src/: account.rs  block.rs  helpers.rs  main.rs  message.rs  ton.rs  transaction_emulator.rs  tvm_emulator.rs
ton-liteserver-client/: CHANGELOG.md  Cargo.toml  build.rs
ton-liteserver-client/examples/: balance.rs  masterchain_block.rs  masterchain_block_header.rs  playground.rs  shards.rs  tower.rs
ton-liteserver-client/src/: balance.rs  bounded_client.rs  client.rs  deserializer.rs  lib.rs  make.rs  request.rs  serializer.rs  tl.rs  tracked_client.rs  upper_bound_watcher.rs  wait_seqno.rs  watch_last_block.rs
ton-liteserver-client/src/serializer/: mod.rs  serializer.rs
ton-liteserver-client/src/tlb/: acc_status_change.rs  account.rs  account_state.rs  account_status.rs  account_storage.rs  blk_master_info.rs  blk_prev_info.rs  block.rs  block_extra.rs  block_header.rs  block_info.rs  (+26 more)
tonlibjson-client/: CHANGELOG.md  Cargo.toml  build.rs
tonlibjson-client/examples/: block_get_tx.rs  cursor_client.rs  dnsresolve.rs  getgems_balance.rs  last_n_transactions.rs  masterchain_info.rs  max_available_blocks.rs  next_block.rs  shards.rs  txs.rs
tonlibjson-client/src/: address.rs  balance.rs  block.rs  client.rs  config.rs  cursor_client.rs  deserialize.rs  discover.rs  dns_discover.rs  error.rs  helper.rs  lib.rs  make.rs  metric.rs  request.rs  retry.rs  router.rs  session.rs  shared.rs  ton.rs  ton_config.rs
tonlibjson-client/tests/: client.rs
tonlibjson-experiment/: Cargo.toml
tonlibjson-experiment/src/: main.rs
tonlibjson-grpc/: Cargo.toml  build.rs
tonlibjson-grpc/proto/: ton.proto
tonlibjson-grpc/src/: grpc.rs  main.rs
tonlibjson-jsonrpc/: Cargo.toml  benchmark.yaml
tonlibjson-jsonrpc/src/: main.rs  params.rs  view.rs
tonlibjson-sys/: CHANGELOG.md  Cargo.toml  build.rs
tonlibjson-sys/src/: lib.rs  tonemulator.rs  tonlibjson.rs
tonlibjson-tokio/: Cargo.toml
tonlibjson-tokio/examples/: last_n_transactions.rs
tonlibjson-tokio/src/: block.rs  client.rs  config.rs  discover.rs  lib.rs  liteserver.rs  make.rs  request.rs  retry.rs  session.rs  ton.rs  ton_config.rs
tvm-grpc/: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
tvm-grpc/proto/: tvm.proto
tvm-grpc/src/: main.rs  threaded.rs  transaction_emulator.rs  tvm.rs  tvm_emulator.rs
(+252 files in other folders)
