[workspace]
resolver = "2"
members = [
    "tonlibjson-sys",
    "tl_parser",
    "adnl-tcp",
    "ton-client-util",
    "tonlibjson-client",
    "ton-liteserver-client",
    "ton-contract",
    "ton-grpc",
    "tvm-grpc",
]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
tower = { version = "0.4", features = ["full"] }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
base64 = "0.22"
hex = "0.4"
tracing-test = "0.2.5"
async-stream = "0.3.6"
toner = "0.3.2"
num-bigint = "0.4"
tonic = { version = "0.11", features = ["gzip"] }
tonic-reflection = "0.11"
tonic-health = "0.11"
tonic-build = "0.11"
prost = "0.12"
quick_cache = "0.5"
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
humantime = "2.1.0"
uuid = { version = "1.13", features = ["v4", "fast-rng", "serde"] }
dashmap = "5.5"
pin-project = "1.1"
rand = "0.8"
bytes = "1.9"
thiserror = "1.0.69"
itertools = "0.13"
bitvec = "1.0.1"
metrics = "0.24.1"
reqwest = { version = "0.12.9", features = ["rustls-tls", "hickory-dns"], default-features = false }
hickory-resolver = { version = "0.24.2", features = ["tokio-runtime"] }
tokio-retry = "0.3"
