[workspace]
resolver = "2"
members = [
    "tonlibjson-sys",
    "tl_parser",
    "adnl-tcp",
    "ton-client-util",
    "tonlibjson-client",
    "ton-liteserver-client",
    "ton-contract",
    "ton-grpc",
    "tvm-grpc",
]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.88"
tower = { version = "0.5.2", features = ["full"] }
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["serde_derive"] }
base64 = "0.22"
hex = "0.4"
tracing-test = "0.2.5"
async-stream = "0.3.6"
toner = "0.3.4"
num-bigint = "0.4"
tonic = { version = "0.13.1", features = ["gzip"] }
tonic-reflection = "0.13.1"
tonic-health = "0.13.1"
tonic-build = "0.13.1"
prost = "0.13.5"
quick_cache = "0.6.14"
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
humantime = "2.2.0"
uuid = { version = "1.17", features = ["v4", "fast-rng", "serde"] }
dashmap = "6.1.0"
pin-project = "1.1.10"
rand = "0.8"
bytes = "1.10.1"
thiserror = "2.0.11"
itertools = "0.14.0"
bitvec = "1.0.1"
metrics = "0.24.2"
reqwest = { version = "0.12.9", features = ["rustls-tls", "hickory-dns"], default-features = false }
hickory-resolver = { version = "0.25.2" }
tokio-retry = "0.3"
nom = "8.0.0"
crc32fast = "1.4.2"
either = "1.15.0"
derive-new = "0.7.0"
metrics-exporter-prometheus = { version = "0.17.2", features = ["http-listener"], default-features = false }
quote = "1.0.40"
syn = "2.0.104"
prettyplease = "0.2.29"
convert_case = "0.8.0"
crc = "3.3.0"
libc = "0.2"
cmake = "0.1"
pkg-config = "0.3.32"
walkdir = "2.5"
sha2 = "0.10.8"
aes = "0.8.4"
ctr = "0.9.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "hazmat"] }