[workspace]
resolver = "2"
members = [
    "tonlibjson-sys",
    "tl-parser",
    "adnl-tcp",
    "ton-client-util",
    "tonlibjson-client",
    "ton-liteserver-client",
    "ton-contract",
    "ton-grpc",
    "tvm-grpc",
]

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
tower = { version = "0.5.3", features = ["full"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["serde_derive"] }
base64 = "0.22.1"
hex = "0.4.3"
tracing-test = "0.2.6"
async-stream = "0.3.6"
toner = "0.7.2"
num-bigint = "0.4.6"
tonic = { version = "0.14.5", features = ["gzip"] }
tonic-reflection = "0.14.5"
tonic-health = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
prost = "0.14.3"
quick_cache = "0.6.17"
url = { version = "2.5.7", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
humantime = "2.3.0"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
dashmap = "6.1.0"
pin-project = "1.1.10"
rand = "0.10.0"
bytes = "1.11.1"
thiserror = "2.0.17"
itertools = "0.14.0"
bitvec = "1.0.1"
metrics = "0.24.2"
reqwest = { version = "0.13.2", features = ["default-tls", "hickory-dns"], default-features = false }
hickory-resolver = { version = "0.25.2" }
tokio-retry = "0.3.0"
nom = "8.0.0"
crc32fast = "1.5.0"
either = "1.15.0"
derive-new = "0.7.0"
metrics-exporter-prometheus = { version = "0.18.1", features = ["http-listener"], default-features = false }
quote = "1.0.45"
syn = "2.0.117"
prettyplease = "0.2.37"
convert_case = "0.11.0"
crc = "3.4.0"
libc = "0.2.183"
cmake = "0.1.57"
pkg-config = "0.3.32"
walkdir = "2.5"
sha2 = "0.10.8"
aes = "0.8.4"
ctr = "0.9.2"
ed25519-dalek = { version = "2.2.0", features = ["hazmat"] }

[patch.crates-io]
tlb = { path = "../toner/crates/tlb" }
tlb-ton = { path = "../toner/crates/tlb-ton" }
