[package]
name = "adnl-tcp"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10.8"
hex = "0.4.3"
aes = "0.8.4"
ctr = "0.9.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "hazmat"] }

[dev-dependencies]
base64 = { workspace = true }
tracing-test = "0.2.4"

[features]
default = ["client", "server"]
server = []
client = []
