[package]
name = "adnl-tcp"
version = "0.3.0"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core", "hazmat"] }

[dev-dependencies]
base64 = { workspace = true }
tracing-test = { workspace = true }

[features]
default = ["client", "server"]
server = []
client = []
