[package]
name = "ton-client-util"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
thiserror = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bitvec = "1.0.1"
