# trigger build: rust 1.73

[package]
name = "ton-grpc"
version = "0.10.3"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[features]
default = []
testnet = ["tonlibjson-client/testnet"]

[dependencies]
tonlibjson-client = { path = "../tonlibjson-client" }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
either = "1.11"
derive-new = "0.6.0"
metrics-exporter-prometheus = "0.14.0"

[dev-dependencies]
tracing-test = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
