# trigger build: rust 1.73

[package]
name = "ton-grpc"
version = "0.11.4"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[features]
default = []
testnet = ["tonlibjson-client/testnet"]

[dependencies]
tonlibjson-client = { path = "../tonlibjson-client" }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
either = { workspace = true }
derive-new = { workspace = true }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"], default-features = false }

[dev-dependencies]
tracing-test = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
