[package]
name = "ton-liteserver-client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tl_parser = { path = "../tl_parser" }
anyhow = { workspace = true }
quote = "1.0"
syn = "2.0.61"
prettyplease = "0.2.17"
convert_case = "0.6.0"

[dependencies]
adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
base64 = { workspace = true }
tracing-test = "0.2.4"
tracing-subscriber = "0.3.18"

[features]
testnet = []
