[package]
name = "ton-liteserver-client"
version = "0.2.2"
edition = "2021"

[build-dependencies]
tl_parser = { path = "../tl_parser" }
anyhow = { workspace = true }
quote = "1.0"
syn = "2.0.98"
prettyplease = "0.2.29"
convert_case = "0.7.1"

[dependencies]
adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
ton-client-util = { path = "../ton-client-util" }
toner.workspace = true
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
tokio-retry = { workspace = true }
url = "2.5.4"

[dev-dependencies]
hex = { workspace = true }
base64 = { workspace = true }
tracing-test = "0.2.5"
tracing-subscriber = "0.3.19"

[features]
testnet = []
