[package]
name = "ton-liteserver-client"
version = "0.2.2"
edition = "2021"

[build-dependencies]
tl_parser = { path = "../tl_parser" }
anyhow = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
convert_case = { workspace = true }

[dependencies]
adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
ton-client-util = { path = "../ton-client-util" }
toner.workspace = true
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
tokio-retry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
base64 = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
testnet = []
