[package]
name = "tonlibjson-client"
version = "0.17.2"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-sys = { path = "../tonlibjson-sys" }
tower = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-stream = { workspace = true }
quick_cache = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12.4", features = ["rustls-tls", "trust-dns"], default-features = false }
hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
itertools = "0.12"
derive-new = "0.6.0"
tokio-retry = "0.3"
crc = "3.2.1"
metrics = "0.22.3"

[dev-dependencies]
tracing-test = { workspace = true }

[build-dependencies]
tl_parser = { path = "../tl_parser" }
anyhow = { workspace = true }
quote = "1.0"
syn = "2.0.60"
prettyplease = "0.2.19"
convert_case = "0.6.0"

[features]
testnet = ["tonlibjson-sys/testnet"]
