[package]
name = "tonlibjson-client"
version = "0.20.2"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-sys = { path = "../tonlibjson-sys" }
ton-client-util = { path = "../ton-client-util" }
tower = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-stream = { workspace = true }
quick_cache = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
tokio-retry = { workspace = true }
derive-new = "0.7.0"
crc = "3.2.1"

[dev-dependencies]
tracing-test = { workspace = true }

[build-dependencies]
tl_parser = { path = "../tl_parser" }
anyhow = { workspace = true }
quote = "1.0"
syn = "2.0.96"
prettyplease = "0.2.29"
convert_case = "0.7.1"

[features]
testnet = ["tonlibjson-sys/testnet"]
