[package]
name = "tonlibjson-client"
version = "0.20.3"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-sys = { path = "../tonlibjson-sys" }
ton-client-util = { path = "../ton-client-util" }
tower = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-stream = { workspace = true }
quick_cache = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
tokio-retry = { workspace = true }
derive-new = { workspace = true }
crc = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }

[build-dependencies]
tl_parser = { path = "../tl_parser" }
anyhow = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
convert_case = { workspace = true }

[features]
testnet = ["tonlibjson-sys/testnet"]
