[package]
name = "tonlibjson-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = "0.3.24"
tonlibjson-tokio = { path = "../tonlibjson-tokio" }
serde_json = "1.0.85"
base64 = "0.13"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
