[package]
name = "tonlibjson-jsonrpc"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[build-dependencies]
cmake = "0.1.48"

[dependencies]
axum = "0.5.13"
anyhow = "1.0.58"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "sync", "macros", "time", "rt"] }
tokio-stream = "0.1.9"
futures = "0.3.21"
tonlibjson-tokio = { path = "../tonlibjson-tokio" }
serde = { version = "1.0.136", features = ["serde_derive"] }
serde_json = "1.0.79"
base64 = "0.13.0"
hex = "0.4.3"

