[package]
name = "tonlibjson-jsonrpc"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[build-dependencies]
cmake = "0.1"

[dependencies]
tonlibjson-tokio = { path = "../tonlibjson-tokio" }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
tokio-stream = { workspace = true }
axum = "0.5"
