[package]
name = "tonlibjson-sys"
version = "0.3.1"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
license = "MIT"
links = "tonlibjson"
description = "Rust binding for tonlibjson from https://github.com/ton-blockchain/ton"
repository = "https://github.com/getgems-io/ton-grpc"
edition = "2021"

[dependencies]
libc = "0.2"
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
cmake = "0.1"
pkg-config = "0.3"

[features]
default = ["tonlibjson", "tonemulator"]
testnet = []
tonlibjson = []
tonemulator = []
