[package]
name = "tonlibjson-sys"
version = "0.4.6"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
license = "MIT"
links = "tonlibjson"
description = "Rust binding for tonlibjson from https://github.com/ton-blockchain/ton"
repository = "https://github.com/getgems-io/ton-grpc"

[dependencies]
libc = "0.2"
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
cmake = "0.1"
pkg-config = "0.3"
walkdir = "2.5"

[features]
default = ["tonlibjson", "tonemulator"]
testnet = []
tonlibjson = []
tonemulator = []
