[package]
name = "tonlibjson-sys"
version = "0.4.5"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
license = "MIT"
links = "tonlibjson"
description = "Rust binding for tonlibjson from https://github.com/ton-blockchain/ton"
repository = "https://github.com/getgems-io/ton-grpc"

[dependencies]
libc = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
cmake = { workspace = true }
pkg-config = { workspace = true }
walkdir = { workspace = true }

[features]
default = ["tonlibjson", "tonemulator"]
testnet = []
tonlibjson = []
tonemulator = []
