[package]
name = "tonlibjson-tokio"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-rs = { path = "../tonlibjson-rs" }
anyhow = "1.0.63"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "sync", "macros", "time", "rt"] }
futures = "0.3.24"
dashmap = "5.4.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
tower = { version = "0.4.13", features = ["full"] }
pin-project = "1.0.12"
tracing = "0.1"
reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
tokio-stream = "0.1.9"
config = { version = "0.13.1", default-features = false }
url = { version = "2.2.2", features = ["serde"] }
