[package]
name = "tonlibjson-tokio"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-rs = { path = "../tonlibjson-rs" }
tower = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-stream = "0.3.3"
dashmap = "5.4.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "serde"] }
pin-project = "1.0.12"
reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
tokio-stream = "0.1.9"
config = { version = "0.13.1", default-features = false }
url = { version = "2.3.0", features = ["serde"] }
