[package]
name = "tvm-grpc"
version = "0.3.4"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-sys = { path = "../tonlibjson-sys", features = ["tonemulator"] }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
rayon = "1.8"
quick_cache = "0.4"

[build-dependencies]
tonic-build = { workspace = true }
