# trigger build: rust 1.73

[package]
name = "tvm-grpc"
version = "0.7.9"
edition = "2021"
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
tonlibjson-sys = { path = "../tonlibjson-sys", features = ["tonemulator"] }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
humantime = { workspace = true }
quick_cache = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
