[package]
name = "testcontainers-ton"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
tokio = { version = "1.50.0", features = ["full"] }
testcontainers = "0.27.1"
base64 = "0.22.1"
serde_json = "1.0.149"
