[package]
name = "testcontainers-ton"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
ton-config = { path = "../ton-config" }
anyhow = { version = "1.0.102", features = ["backtrace"] }
tokio = { version = "1.51.1", features = ["full"] }
testcontainers = "0.27.1"
base64 = "0.22.1"
