[package]
name = "testcontainers-ton"
version = "0.3.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
ton-config = { path = "../ton-config" }
anyhow = { version = "1.0.103", features = ["backtrace"] }
tokio = { version = "1.52.3", features = ["full"] }
testcontainers = { version = "0.27.1", features = ["reusable-containers"] }
base64 = "0.22.1"
