[package]
name = "ton-client-util"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
thiserror = "2.0.17"
itertools = "0.14.0"
tracing = "0.1.44"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.32"
bitvec = "1.0.1"
tower = { version = "0.5.3", features = ["full"] }
metrics = "0.24.2"
pin-project = "1.1.10"
anyhow = { version = "1.0.102", features = ["backtrace"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["default-tls", "hickory-dns"], default-features = false }
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
