[package]
name = "ton-client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-stream = "0.3.6"
futures = "0.3.32"
hex = "0.4.3"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
