[package]
name = "ton-client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
ton-address = { path = "../ton-address" }
async-trait = "0.1"
async-stream = "0.3"
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
itertools = "0.14"
tracing = "0.1"
