[package]
name = "ton-client"
version = "0.3.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[dependencies]
ton-address = { path = "../ton-address" }
ton-config = { path = "../ton-config" }
ton-tower = { path = "../ton-tower" }
async-stream = "0.3"
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
itertools = "0.14"
tracing = "0.1"
tower = { version = "0.5.3", features = ["full"] }
tokio = { version = "1.50", features = ["sync", "rt", "time", "macros"] }
tokio-retry = "0.3"
dashmap = "6.1"
bitvec = "1.0"
metrics = "0.24"
thiserror = "2.0"
tokio-stream = { version = "0.1", features = ["sync"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
ton-liteserver-client = { path = "../ton-liteserver-client"}
tonlibjson-client = { path = "../tonlibjson-client"}
rstest = "0.26.1"
testcontainers-ton = { path = "../testcontainers-ton" }
tracing-test = "0.2.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
