[package]
name = "ton-config"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[features]
testnet = []

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
reqwest = { version = "0.13.2", features = ["default-tls"], default-features = false }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread"] }
url = { version = "2.5.7", features = ["serde"] }
