[package]
name = "ton-contract"
version = "0.1.10"
edition = "2024"
rust-version.workspace = true
authors = [
    "Arseny Mitin <mitinarseny@gmail.com>",
    "Andrei Kostylev <a.kostylev@pm.me>",
]

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
base64 = "0.22.1"
num-bigint = "0.4.6"
thiserror = "2.0.17"
ton-client = { path = "../ton-client" }
toner = "0.7.3"
