[package]
name = "ton-contract"
version = "0.2.1"
edition = "2024"
rust-version.workspace = true
authors = [
    "Arseny Mitin <mitinarseny@gmail.com>",
    "Andrei Kostylev <a.kostylev@pm.me>",
]

[dependencies]
ton-address = { path = "../ton-address" }
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
lazy_static = "1.5.0"
num-bigint = "0.4.6"
thiserror = "2.0.17"
ton-client = { path = "../ton-client" }
toner = { workspace = true }
toner-tlb-macros = { path = "../toner-tlb-macros" }

[dev-dependencies]
testcontainers-ton = { path = "../testcontainers-ton" }
tonlibjson-client = { path = "../tonlibjson-client" }
ton-liteserver-client = { path = "../ton-liteserver-client" }
tokio = { version = "1.50.0", features = ["full"] }
