[package]
name = "ton-emulator"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
tonlibjson-sys = { path = "../tonlibjson-sys" }
tracing = "0.1.44"

[features]
default = []
testnet = ["tonlibjson-sys/testnet"]
bundled = ["tonlibjson-sys/bundled"]
