[package]
name = "ton-grpc"
version = "0.11.6"
edition = "2024"
rust-version.workspace = true
authors = ["Andrei Kostylev <a.kostylev@pm.me>"]

[features]
default = []
testnet = ["tonlibjson-client/testnet"]

[dependencies]
tonlibjson-client = { path = "../tonlibjson-client" }
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
anyhow = { version = "1.0.102", features = ["backtrace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tonic = { version = "0.14.5", features = ["gzip"] }
tonic-prost = "0.14.5"
tonic-reflection = "0.14.5"
tonic-health = "0.14.5"
prost = "0.14.3"
url = { version = "2.5.7", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
humantime = "2.3.0"
either = "1.15.0"
derive-new = "0.7.0"
metrics-exporter-prometheus = { version = "0.18.1", features = ["http-listener"], default-features = false }

[dev-dependencies]
tracing-test = "0.2.6"
testcontainers-ton = { path = "../testcontainers-ton" }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
